# ComfyUI_CSGO_Wrapper

./: README.md  __init__.py  csgo_node.py  pyproject.toml  requirements.txt
CSGO/ip_adapter/: ip_adapter.py
example/: new1.json  workflow.json
