[project]
name = "comfyui_csgo_wrapper"
description = "using InstantX's CSGO in comfyUI for style"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_CSGO_Wrapper"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "Smthemex"
DisplayName = "ComfyUI_CSGO_Wrapper"
Icon = ""
